2005-03-09  Mike Kestner  <mkestner@novell.com>

	* */*.custom : scrub for string usage in DllImports.
	* gnome/Makefile.am : remove IconTheme.custom, it's not generated.

2005-03-09  Mike Kestner  <mkestner@novell.com>

	* glib/Marshaller.cs : add IntPtr.Zero guarding.

2005-03-09  Alexandre Gomes  <alexmipego@hotmail.com>

	* gtk/Gtk.metadata: Set GetVisibleRect param to be passed as out.

2005-03-08  Mike Kestner  <mkestner@novell.com>

	* */*.cs : scrub for StringToPtrAnsi and string usage in DllImports.
	* */*.custom : begin the scrub here too.
	* generator/ConstStringGen.cs : implement IManualMarshaler and move to
	100% IntPtr marshaling.
	* generator/Ctor.cs : call Body.Finish too.
	* generator/IManualMarshaler.cs : new interface for generatables that
	marshal manually and need cleanup.
	* generator/Makefile.am : new file.
	* generator/MethodBody.cs : use IManualMarshaler if applicable.

2005-03-07  Mike Kestner  <mkestner@novell.com>

	* generator/MethodBody.cs : remove an unused var.
	* generator/ReturnValue.cs : privatize a couple props. Refactor the
	SymbolTable lookup logic to be generatable based.

2005-03-04  Mike Kestner  <mkestner@novell.com>

	* generator/ImportSignature.cs : out param handling fix.
	* generator/Makefile.am : kill StringGen.cs.
	* generator/MethodBody.cs : simplify out param handling.
	* generator/StringGen.cs : kill it, now using MarshalGen.
	* generator/SymbolTable.cs : make non-const strings use an appropriate
	MarshalGen.  Non-const strings are now correctly marshaled as Utf8.
	* glib/Marshaller.cs : add some utf8-fu for strdup/free marshaling.
	Add a method to alloc/copy structs to native memory, unused yet.
	* gtk/Gtk.metadata : partially fix a broken delegate.

2005-03-04  Mike Kestner  <mkestner@novell.com>

	* generator/Method.cs : refactor out some retval logic.
	* generator/ReturnValue.cs : add FromNative and IsVoid members.

2005-03-03  Mike Kestner  <mkestner@novell.com>
