@@ -1,3 +1,10 @@
+2005-03-10  Mike Kestner  <mkestner@novell.com>
+
+	* gtk/Style.custom : add bg_pixmap accessors. remove IntPtr[] vars
+	and s/6/5 for array sizes.
+	* gtk/glue/style.c : add bg_pixmap field glue.
+	[Fixes #73532]
+
 2005-03-09  Mike Kestner  <mkestner@novell.com>
 
 	* */*.custom : scrub for string usage in DllImports.
